Fix layout on services page
Identified weakness in design from phase 2 is now fixed.
Text got shortened, layout shifts later and there is a desktop and mobile component for theapp section.

--- a/css/services.css
+++ b/css/services.css
@@ -15,6 +15,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+  margin-bottom: 40px;
 }
 
 .coaching-section {
@@ -24,7 +25,6 @@
 .coaching-section h1,
 .app-section h1 {
   font-size: var(--font-size-service-h1);
-
   font-weight: 700;
 }
 
@@ -38,13 +38,53 @@
 
 .services-image {
   margin-bottom: 2rem;
-  margin-top: 0.5rem;
+  margin-top: 2rem;
   min-width: 300px;
-  max-width: 600px;
+  max-width: 700px;
   width: 100%;
   border-radius: 16px;
   object-fit: contain;
   align-self: center;
+}
+
+.app-section-mobile {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.app-section-desktop {
+  display: flex;
+  flex-direction: row;
+}
+
+@media (min-width: 1280px) {
+  .services-main {
+    margin-bottom: 100px;
+  }
+}
+
+@media (min-width: 1300px) {
+  #seo-image {
+    display: none;
+  }
+}
+
+@media (max-width: 1279px) {
+  .app-section-desktop {
+    display: none;
+  }
+}
+
+@media (min-width: 1280px) {
+  .app-section-mobile {
+    display: none;
+  }
+  #mobile-button {
+    display: none;
+  }
 }
 
 @media (max-width: 480px) {
@@ -68,17 +108,25 @@
     --font-size-service-h1: 2rem;
     --font-size-service-h2: 1.2rem;
   }
+  .coaching-text,
+  .services-text {
+    width: 80%;
+  }
 }
 
-@media (min-width: 768px) and (max-width: 1023px) {
+@media (min-width: 768px) and (max-width: 1279px) {
   :root {
     --font-line-height-service: 34px;
     --font-size-service-h1: 2.1rem;
     --font-size-service-h2: 1.3rem;
   }
+  .coaching-text,
+  .services-text {
+    width: 80%;
+  }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1280px) {
   :root {
     --font-line-height-service: 36px;
     --font-size-service-h1: 2.2rem;
@@ -94,6 +142,7 @@
   }
   .app-section {
     margin-top: 80px;
+    flex-direction: column;
   }
   .coaching-text,
   .services-text {
@@ -111,7 +160,6 @@
     padding-left: 20px;
     width: 50%;
     display: flex;
-    flex-direction: column;
     place-items: center;
   }
   .services-main h2 {
